# rust-fp-skill-examples

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml
ecommerce/: Cargo.toml  README.md  clippy.toml  deny.toml
ecommerce/crates/api/: Cargo.toml
ecommerce/crates/api/src/: auth.rs  dto.rs  error.rs  lib.rs  main.rs  routes.rs  state.rs
ecommerce/crates/api/tests/: http.rs  workflows.rs
ecommerce/crates/api/tests/common/: mod.rs
ecommerce/crates/app/: Cargo.toml
ecommerce/crates/app/src/: ctx.rs  errors.rs  lib.rs  ports.rs
ecommerce/crates/app/src/workflows/: auth.rs  cart.rs  catalog.rs  mod.rs  orders.rs
ecommerce/crates/domain/: Cargo.toml
ecommerce/crates/domain/src/: cart.rs  catalog.rs  lib.rs  money.rs  order.rs  user.rs
ecommerce/crates/infra/: Cargo.toml
ecommerce/crates/infra/src/: clock.rs  db.rs  hasher.rs  ids.rs  lib.rs  repos.rs  rows.rs  tx.rs
