[package]
name = "infra"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

# The only crate that knows the database is SQLite, that hashing is scrypt, and that
# ids are UUIDs. Everything above it sees traits.
[dependencies]
app = { workspace = true }
domain = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
scrypt = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
subtle = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
